# ghostline

./: .gitignore  CURRENT_SETUP.md  ChatGPT_asks1_buildproduct.txt  ChatGPT_asks2_verifyproduct.txt  DATABASE_ACCESS_INSTRUCTIONS.md  DATABASE_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  FILE_UPLOAD_FIX_SUMMARY.md  FINAL_LOGIN_FIX_STATUS.md  INTEGRATION_TEST_REPORT.md  LOGIN_FIX_STATUS.md  LOGIN_TEST_INSTRUCTIONS.md  README.md  S3_UPLOAD_FIX_STATUS.md  S3_UPLOAD_ISSUE_FIX.md  UX_walkthrough.txt  add_filename_timestamps.sh  add_filename_timestamps_proper.sh  add_filename_timestamps_smart.sh  add_git_timestamps.sh  add_timestamps.sh  agentworkflow.txt  api_service.json  container_logs.json  create_jump_host.sh  create_new_feature.txt  current_running_tasks.json  current_task_desc.json  current_task_logs.json  current_tasks.json  cursor_full_e2e_live_test_status.md  db_connect.sh  debug_tasks.json  diagnose_s3_issue.py  docker-compose.yml  dump_restore.sh  ecs_services.json  emergency_restore.json  env_vars.json  failed_task_logs.json  (+44 more)
ghostline/agents/: .gitignore  CODEOWNERS  Dockerfile  README.md  README_2025-06-26.md  pyproject.toml
ghostline/agents/.github/: pull_request_template.md  pull_request_template_2025-06-26.md
ghostline/agents/.github/workflows/: deploy.yml
ghostline/agents/agents/base/: __init__.py  agent.py
ghostline/agents/agents/core/: __init__.py  conversation_logger.py  database.py
ghostline/agents/agents/specialized/: __init__.py  cohesion_analyst.py  content_drafter.py  fact_checker.py  outline_planner.py  schemas.py  voice_editor.py
ghostline/agents/orchestrator/: __init__.py  subgraphs.py  workflow.py
ghostline/agents/tests/: test_canon_memory.py  test_feedback_formatting.py  test_pydantic_structured_outputs.py  test_sanitize_grounding.py  test_style_gates.py
ghostline/api/: .gitignore  CODEOWNERS  DATABASE_RECOVERY_STATUS.md  DEPLOYMENT_ISSUE_ANALYSIS.md  Dockerfile  FIX_500_ERRORS.md  FIX_BOOKGENRE_ENUM.md  PROJECT_DETAIL_IMPLEMENTATION.md  PYTEST_E2E_RESULTS.md  README.md  README_2025-06-26.md  check_database_structure.py  env.example  pyproject.toml  test_safety_config.py  test_upload_after_fix.py  trigger_deployment.sh
ghostline/api/.github/: pull_request_template.md  pull_request_template_2025-06-26.md
ghostline/api/.github/workflows/: ci.yml  deploy.yml  test.yml
ghostline/api/alembic/: env.py
ghostline/api/alembic/versions/: 235925f86ed6_rename_project_name_to_title.py  a5539dbb4d4e_fix_projectstatus_enum_to_use_lowercase_.py  add_llm_usage_logs_table.py  c3b9f49732db_expand_bookgenre_enum_to_include_new_.py  eb1f54a9d067_add_missing_project_columns_subtitle_.py  ff58d1e57171_add_comprehensive_schema_for_ux_fixed.py  phase7_schema_reconciliation.py
ghostline/api/app/: main.py
ghostline/api/app/api/: deps.py
ghostline/api/app/core/: celery_app.py  config.py
ghostline/api/app/db/: base.py  types.py
ghostline/api/app/models/: __init__.py  api_key.py  billing_plan.py  book_outline.py  chapter.py  chapter_revision.py  content_chunk.py  exported_book.py  generation_task.py  llm_usage_log.py  notification.py  project.py  qa_finding.py  source_material.py  token_transaction.py  user.py  voice_profile.py
ghostline/api/app/schemas/: auth.py  billing.py  project  project 2.py  project.py
ghostline/api/app/services/: auth.py  book_export.py  cost_tracker.py  document_processor.py  embeddings.py  generation.py  llm.py  processing.py  rag.py  safety.py  storage.py  voice_metrics.py  (+1 more)
ghostline/api/evals/: __init__.py  run.py
ghostline/api/scripts/: README.md  analyze_costs.py  audit_book_grounding.py  audit_run_integrity.py  check_and_fix_enums.py  deploy_db.sh  fix_bookgenre_enum.py  fix_bookgenre_enum.sql  fix_materialtype_enum.py  fix_projects_schema.sql  fix_projectstatus_enum.sql  fix_projectstatus_enum_migration.sh  fix_upload_enums.sql  init_db_simple.py  monitor_generation.py  recreate_database_schema.sh  regression_scan_phase7.py  run_20page_generation.py  seed_billing_plans.py  test_automatic_cost_logging.py  test_cost_tracking.py  test_models.py  test_phase7_embeddings.py  test_phase7_schema.py  test_phase7_services.py  test_project_creation.py  test_schema.py  validate_schema.py
ghostline/api/tests/: README.md  conftest.py  test_main.py
(+300 files in other folders)
