[project]
name = "ghostline-agents"
version = "0.1.0"
description = "GhostLine Multi-Agent System"
authors = [
    {name = "GhostLine Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langgraph (>=0.2.69,<0.3.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langchain-openai (>=0.3.0,<0.4.0)",
    "langchain-anthropic (>=0.3.0,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "unstructured (>=0.18.1,<0.19.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "typer (>=0.17.2,<0.18.0)",
    "rich (>=13.10.7,<14.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
