[tool.poetry]
name = "ghostline-agents"
version = "0.1.0"
description = "GhostLine Multi-Agent System"
authors = ["GhostLine Team"]
readme = "README.md"
packages = [{include = "agents"}, {include = "orchestrator"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.0"
langchain-community = "^0.3.0"
numpy = "^1.26.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
